@@ -1,0 +1,24 @@
+Short-term
+ * Get this thing to actually work
+ * Accept command line argument to tell whether it's going to be user
+   or global
+ * Accept command line argument to allow rollback of a specific backend
+ * Remove backends list and rely on the above command line argument
+ * Add logic in the control center to activate this capplet with the
+   appropriate command line argument from menu items or a control
+   connected with each capplet
+ * Something that tells the user when he tries to go back so far in
+   time that there is no configuration available from that date
+
+Long(er)-term
+ * Somehow fix this so that the user sees the old configurations as he
+   selects a time. The selection should be a slider that the user slides
+   back and forth to roll forwards and backwards, and the user should see
+   the configuration settings as reflected in the position of the slider.
+	- This could just be put into libcapplet, so that the user
+	  sees this slider at all times. That could be a bit much for a lot of
+	  users, though.
+	- This could be a bonobo component, acting as a container for
+	  capplets (which are then bonobo controls).
+	- This could be a feature of libcapplet enabled by a command
+	  line switch
